# asyncinput

./: .gitignore  CMakeLists.txt  LICENSE  OPTIMIZATION_DESIGN.md  README.md  WARP.md  copy_evdev_keycodes.py  plan.md
.cache/clangd/index/: asyncinput.h.D124834D080E5426.idx  callback_demo.c.024A30DB4B4C5B2B.idx  libasyncinput.c.6A6AAC46A61237E7.idx  read_keys.c.42D595EE27057F2C.idx
build-rel/: benchmark_asyncinput  callback_demo  mouse_demo  read_keys  sdl3_asyncinput  sdl3_demo
examples/: benchmark.c  benchmark_asyncinput.c  benchmark_c  callback_demo.c  device_specific_demo.c  hotplug_mouse_wait.c  input_lib.c  input_lib.h  minimal_sdl3  minimal_sdl3.c  mouse_demo.c  read_keys.c  sdl3_asyncinput.c  sdl3_clear  sdl3_clear.c  sdl3_demo.c
include/: asyncinput.h
src/: libasyncinput.c  libasyncinput_posix.c  libasyncinput_stub.c  libasyncinput_win.c
